--- a/profbjorn.html
+++ b/profbjorn.html
@@ -13,27 +13,19 @@
     </span> -->
 <div class="container">
     <div class="images" id="background_image" style="background-image: url('assets/intro_1.png');">
-        <h1 id="word_lines">_ _ _ _ </h1>
-        <h3 id="hint"></h3>
+        <div id="game_container">
+            <h1 id="word_lines">___</h1>
+            <h3 id="hint"></h3>
+            <div id="box"></div>
+        </div>
         <div id="button_container">
             <button id="next_button" onclick="nextButton()">
                 <img src="" alt="Next Button">
             </button>
         </div>
-        <div id="box"></div>
     </div>
 </div>
 
-<!-- 
-    <h1 id="word_lines"></h1>
-    <h3 id="hint"></h3>
-
-    <h3 id="hangman_lives"></h3>
-
-    <div id="box"></div> -->
-
-    
-
-    <script src="profbjorn.js"></script>
+<script src="profbjorn.js"></script>
 </body>
 </html>
